fix: allow overflow-x in codeblocks

--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -176,7 +176,7 @@ code, pre, .highlight table, .highlight tr, .highlight td {
 
     .table-wrapper {
       max-height: 0;
-      overflow: hidden;
+      overflow: auto hidden;
       transition: max-height 0.5s ease-out;
     }
 
